--- a/_posts/2020-01-14-Test Blog.md
+++ b/_posts/2020-01-14-Test Blog.md
@@ -4,7 +4,7 @@ title:      Test-Blog
 subtitle:   Test-Blog
 date:       2020-01-14
 author:     Hey-BlingBling
-header-img: img/home-bg-o.jpg
+header-img: img/post-web.jpg
 catalog: true
 tags:
     - Blog
