--- a/_posts/2020-01-14-Diary.md
+++ b/_posts/2020-01-14-Diary.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      “回家”
-subtitle:   Back Home
+title:      "回家"
+subtitle:   "Back Home"
 date:       2020-01-14
 author:     Hey-BlingBling
 header-img: img/post-web.jpg
@@ -9,6 +9,6 @@ catalog: true
 tags:
     - Diary
 ---
-## 和宝贝一起回家啦
+## 和 Xuan Xuan 宝贝一起回家啦
 
-终于终于终于。
+Bling 和 Xuan 第一次一起坐回家的列车啦！
