add image to post 2021-05-26.

--- a/_posts/2020-05-26-HIT 2021春网络安全笔记.md
+++ b/_posts/2020-05-26-HIT 2021春网络安全笔记.md
@@ -87,9 +87,9 @@ linux中每个用户可以属于多个分组，分组可以是唯一的原始组
 3. 其他用户权限（other）
 4. 附加权限，有suid，guid，sticky
 
-![](assets/16202041064062.jpg)
+<img src="_image/2020-05-26-img1.png" style="zoom:50%;" />
 
-![](assets/16202041174245.jpg)
+<img src="_image/2020-05-26-img2.jpg" style="zoom:50%;" />
 
 每个进程生成时会有自己的ID，一般有两类：
 
